<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/sign_in">

        <ImageView
            android:contentDescription="@string/logo"
            android:id="@+id/imgLogo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="100dp"
            android:background="@drawable/logotext" />

        <TextView
            android:id="@+id/tvsilahkan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/imgLogo"
            android:layout_marginTop="50dp"
            android:gravity="center_horizontal"
            android:text="@string/tvsilahkan"
            android:textAlignment="center" />

        <EditText
            android:inputType="text"
            android:autofillHints="@string/hint_username"
            android:layout_width="180dp"
            android:id="@+id/etUsername"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvsilahkan"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="16dp"
            android:drawableStart="@drawable/ic_username"
            android:drawableLeft="@drawable/ic_username"
            android:hint="@string/username" />

        <EditText
            android:autofillHints="@string/hint_password"
            android:id="@+id/etPassword"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/etUsername"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/fab_margin"
            android:drawableStart="@drawable/ic_password"
            android:drawableLeft="@drawable/ic_password"
            android:hint="@string/hint_password"
            android:inputType="textPassword" />

        <Button
            android:id="@id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etPassword"
            android:layout_centerHorizontal="true"
            android:text="LOGIN"
            android:background="@drawable/btn_sign_in" />

        <TextView
            android:id="@+id/tvCreateAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnLogin"
            android:layout_marginTop="@dimen/fab_margin"
            android:gravity="center_horizontal"
            android:text="Create a new Account !"
            android:textAlignment="center" />

    </RelativeLayout>

</LinearLayout>
